# AntiCheat

./: .gitignore  CMakeLists.txt  checkLine.php  main.php  run.sh
include/: CMakeLists.txt  fileIO.h  geojsonWriter.h  houghline.h  recordLoader.h  simplifyLine.h  transform.h
src/: CMakeLists.txt  checkLine.cpp  fileIO.cpp  geojsonWriter.cpp  houghline.cpp  jsoncpp.cpp  main.cpp  recordLoader.cpp  simplifyLine.cpp  transform.cpp
